# mcp-server-igcl-poc

./: .gitignore  CMakeLists.txt  README.md
plugins/get_3d_capabilities/: CMakeLists.txt  Get3DCapabilities.cpp
plugins/set_anisotropic/: CMakeLists.txt  SetAnisotropic.cpp
plugins/set_endurance_gaming/: CMakeLists.txt  SetEnduranceGaming.cpp
plugins/set_frame_sync/: CMakeLists.txt  SetFrameSync.cpp
